Debugged locally. I did use a very wasteful creation of our cookie when parsing through all cookies. Maybe fix that if we have enough time.

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ build/*
 bin/*
 *.class
 src/AwsCredentials.properties
-WebContent/WEB-INF/classes/AwsCredentials.properties
+WebContent/WEB-INF/classes/
